--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -57,10 +57,30 @@ body, p {
 }
 
 .footer_address {
-    font-style: italic; 
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-style: italic;
     margin-right: 20px;
     border-right: 2px solid #B2B5B9;
     padding-right: 20px;
+    gap: 10px; 
+    max-width: 620px; 
+}
+
+.footer_address > div {
+    margin: 0;
+    padding: 5px;
+    background-color: rgba(255, 255, 255, 0.1); 
+    border-radius: 5px;
+}
+
+.footer_map {
+    width: 400px;
+    height: 150px;
+    border: 0;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
+    border-radius: 5px; 
 }
 
 .footer_hours_days {
