--- a/src/Components/Inventory/Inventory.css
+++ b/src/Components/Inventory/Inventory.css
@@ -9,7 +9,8 @@
 .advancedTitle {
     font-size: 24px;
     margin-bottom: 20px;
-    color: #333;
+    color: rgb(200, 177, 109);
+    text-align: center;
 }
 
 .advancedSearch {
