--- a/src/Components/InventoryCard/InventoryCard.css
+++ b/src/Components/InventoryCard/InventoryCard.css
@@ -28,27 +28,26 @@
 .car_info {
     display: flex;
     flex-direction: column;
-    align-items: center;
+   
     width: 100%;
-}
-
-.car_info p {
-    margin: 5px 0;
-    color: #333;
 }
 
 .car_title {
     font-size: 18px;
     font-weight: bold;
+    text-align: center;
+}
+.car_info p {
+    margin: 5px 0;
+    color: #333;
 }
 
-.car_price {
-    color: #007BFF;
-    font-weight: bold;
-}
+
+
+
 
 .interested {
-    background-color: #007BFF;
+    background-color: #d6a30bd0;
     color: #fff;
     padding: 10px 20px;
     border: none;
