--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -113,3 +113,12 @@
 .discountIcon{
     size: 10px;
 }
+
+.header_espanol {
+    font-size: 16px;
+    color: #857614; 
+    width: 100%;
+    text-align: right;
+    margin-top: 10px;
+    order: -1;
+}
